--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -198,7 +198,8 @@
                                  on-juicy-tile-tree-refresh-tile-list="{{refreshTileList}}"
                                  on-juicy-tile-tree-hover="{{treeHoverAction}}"
                                  on-juicy-tile-tree-blur="{{treeBlurAction}}"
-                                 on-juicy-tile-tree-drag-item-stop="{{treeItemDragStop}}"></juicy-tile-tree>
+                                 on-juicy-tile-tree-drag-item-stop="{{treeItemDragStop}}"
+                                 on-juicy-tile-tree-item-name-changed="{{refreshForm}}"></juicy-tile-tree>
             </div>
         </juicy-resizable>
     </juicy-draggable>
