--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-draggable.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-draggable.html
@@ -1,6 +1,6 @@
 ﻿<link rel="import" href="../../polymer/polymer.html" />
 
-<polymer-element name="juicy-draggable" attributes="elementId handleId position dropSelector dragHelperClass dragHoverClass draggingClass">
+<polymer-element name="juicy-draggable" attributes="elementId handleId position dropSelector dragHelperClass dragHoverClass draggingClass disabled">
     <template>
         <style>
         </style>
