--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
@@ -230,7 +230,7 @@
         </style>
         <template id="item-name">
             <input type="text" class="item-name {{ {active: editItem == item} | tokenList}}" readonly?="{{editItem != item}}" value="{{item.itemName}}" 
-                   on-dblclick="{{nameDblclickAction}}" on-blur="{{nameBlurAction}}" on-keypress="{{nameKeypressAction}}" />
+                   on-dblclick="{{itemNameDblclickAction}}" on-blur="{{nameBlurAction}}" on-keypress="{{nameKeypressAction}}" />
         </template>
         <template id="item-visibility">
             <template if="{{editItem != item}}">
@@ -245,8 +245,8 @@
                         <juicy-toggle-icon-button class="expand" iconon="chevron-right" iconoff="expand-more" checked="{{collapsed[toRootName(branch.node)]}}"></juicy-toggle-icon-button>
                         <div on-tap="{{tapAction}}" class="txt">
                             <core-icon icon="view-quilt" title="juicy-tile-list"></core-icon>
-                            <input type="text" class="item-name {{ {active: editBranch == branch && editItem == null} | tokenList}}" readonly?="{{editItem != item}}" value="{{ branch.node.setup.itemName }}"
-                                   on-dblclick="{{nameDblclickAction}}" on-blur="{{nameBlurAction}}" on-keypress="{{nameKeypressAction}}" />
+                            <input type="text" class="item-name {{ {active: editBranch == branch} | tokenList}}" readonly?="{{editBranch != branch}}" value="{{ branch.node.setup.itemName }}"
+                                   on-dblclick="{{branchNameDblclickAction}}" on-blur="{{nameBlurAction}}" on-keypress="{{nameKeypressAction}}" />
                         </div>
                     </div>
                     <ul class="branch">
@@ -292,8 +292,7 @@
                                             <template bind ref="item-visibility"></template>
                                             <juicy-draggable on-juicy-draggable-stop="{{ itemDragStop }}" position="static" dropselector="html /deep/ ul.branch li .drop-folder" disabled?="{{editItem == item}}">
                                                 <div on-tap="{{tapAction}}" class="txt">
-                                                    <template bind ref="item-name">
-                                                    </template>
+                                                    <template bind ref="item-name"></template>
                                                 </div>
                                             </juicy-draggable>
                                         </div>
