--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -173,12 +173,13 @@
         }
     </style>
 
-    <juicy-tile-editor-form id="form"
-      selectedItems="{{selectedItems}}" 
-      editedTiles="{{editedTiles}}"
-      on-juicy-tile-editor-revert="{{revertAction}}"
-      on-juicy-tile-editor-form-tree-changed="{{treeChangedAction}}"></juicy-tile-editor-form>
-
+      <juicy-tile-editor-form id="form"
+                              selecteditems="{{selectedItems}}"
+                              editedtiles="{{editedTiles}}"
+                              tilelists="{{tileLists}}"
+                              on-juicy-tile-editor-revert="{{revertAction}}"
+                              on-juicy-tile-editor-form-tree-changed="{{treeChangedAction}}"
+                              on-juicy-tile-editor-clear="{{clearAction}}"></juicy-tile-editor-form>
       
     <juicy-draggable elementid="sidebar" handleid="sidebarHeader" position="fixed" id="sidebarDrag">
         <juicy-resizable righthandle=".resize-right" lefthandle=".resize-left" id="sidebarResize">
